--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && npm run build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.2",
@@ -26,6 +28,7 @@
     "swr": "^2.2.2"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "prisma": "^5.12.1"
   }
 }
